--- a/src/XelsDesktopWalletApp/Views/Exchange.xaml
+++ b/src/XelsDesktopWalletApp/Views/Exchange.xaml
@@ -113,10 +113,95 @@
                 </ComboBox>
             </Grid>
 
-            <Grid>
+            <Grid Height="368"  Background="WhiteSmoke" Width="779">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="120*"/>
+                    <RowDefinition Height="250*"/>
+                </Grid.RowDefinitions>
+                <StackPanel Orientation="Vertical" Grid.Row="0" HorizontalAlignment="Center" Width="575">
+
+                    <Grid Background="White" Width="571" Height="117" Margin="0 20 0 0">
+
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                            <ColumnDefinition Width="*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <StackPanel Orientation="Vertical" Margin="0,10,285,66"  Grid.Column="0" Grid.ColumnSpan="2" >
+                            <Label Content="Deposit" Height="16" Width="265" Foreground="#FF9B9B9B"
+                                   FontFamily="Microsoft YaHei" FontSize="10" Padding="0" Margin="0"/>
+                            <TextBlock x:Name="DepositDD" FontFamily="Microsoft YaHei" FontSize="10" Foreground="#FF9B9B9B" 
+                                   TextAlignment="Right" Height="16" Width="264" Padding="2" />
+
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical" Margin="0,10,-1,66"  Grid.Column="1" >
+                            <Label Content="Amount" Height="16" Width="265" Foreground="#FF9B9B9B"
+                                FontFamily="Microsoft YaHei" FontSize="10" Padding="0" Margin="0"/>
+                            <TextBlock x:Name="AmountTxt" FontFamily="Microsoft YaHei" FontSize="10" Foreground="#FF9B9B9B" 
+                                TextAlignment="Right" Height="16" Width="264" Padding="2" />
+
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical" Margin="0,10,-1,66"  Grid.ColumnSpan="2" >
+                            <Label Content="Message" Height="16" Width="265" Foreground="#FF9B9B9B"
+                                FontFamily="Microsoft YaHei" FontSize="10" Padding="0" Margin="0"/>
+
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical" Margin="0,10,-1,66"  Grid.ColumnSpan="2" >
+                            <Button Content="Exchange Order Submit" Click="ExchangeOrderSubmitButton_Click" FontFamily="Microsoft YaHei Light" 
+                                Foreground="#FF0FD421" Background="White" BorderBrush="#FF30CD3E" FontSize="10" 
+                                Margin="0,79,0,10" HorizontalAlignment="Center" Width="77">
+                                <Button.Resources>
+                                    <Style TargetType="{x:Type Border}">
+                                        <Setter Property="CornerRadius" Value="2"/>
+                                    </Style>
+                                </Button.Resources>
+                            </Button>
+                        </StackPanel>
+
+                    </Grid>
+                </StackPanel>
+
+
+                <StackPanel Orientation="Vertical" Grid.Row="1" Margin="10,10,10,10" Grid.ColumnSpan="3">
+                    <Grid Height="113">
+                        <TextBlock Width="99" HorizontalAlignment="Center" FontFamily="Microsoft YaHei" Height="16" VerticalAlignment="Top" 
+                                   Text="LATEST EXCHANGES" FontSize="10" Foreground="#FF9B9B9B" Margin="0,-11,0,0"/>
+
+
+                        <Grid>
+                            <Label Name="NoData" Content="Looks like you haven't made any transactions yet."  HorizontalAlignment="Center"
+                       FontFamily="Microsoft YaHei Light" Margin="233,10,213,80" FontSize="12" FontWeight="Bold" Foreground="#FF494747"/>
+
+                        </Grid>
+                        <Grid Margin="0,20,0,-151">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="97*"/>
+                                <ColumnDefinition Width="156*"/>
+                            </Grid.ColumnDefinitions>
+                            <ListView Margin="0,-13,0,39" x:Name="ExchangeList" FontSize="9" BorderThickness="0" Grid.ColumnSpan="2" >
+                                <ListView.View>
+                                    <GridView>
+                                        <GridViewColumn Header="Order Id" Width="200" 
+                                            DisplayMemberBinding="{Binding Path=id}"  />
+                                        <GridViewColumn Header="Deposit" Width="150"
+                                            DisplayMemberBinding="{Binding Path=deposit_address}" />
+                                        <GridViewColumn Header="Recived" Width="150" 
+                                            DisplayMemberBinding="{Binding Path=xels_address}"  />
+                                        <GridViewColumn Header="Status" Width="150" 
+                                            DisplayMemberBinding="{Binding Path=status}"  />
+                                    </GridView>
+                                </ListView.View>
+                                <TextBlock Text="TextBlock" TextWrapping="Wrap"/>
+                            </ListView>
+                        </Grid>
+                    </Grid>
+                </StackPanel>
+            </Grid>
+
+            <!--<Grid>
                 <Label Content="Expense window." FontFamily="Microsoft YaHei Light"/>
 
-            </Grid>
+            </Grid>-->
 
 
         </StackPanel>
