Exchange - 1. validations 2. new order. model, api request, response. 3. deposit - transfer web3 v1

--- a/src/XelsDesktopWalletApp/Views/Exchange.xaml
+++ b/src/XelsDesktopWalletApp/Views/Exchange.xaml
@@ -133,7 +133,7 @@
                             <ComboBox ItemsSource="{Binding Path=Coins, Mode=TwoWay}" 
                                       SelectedItem="{Binding Path=SelectedCoin, Mode=TwoWay}"
                                       Width="263" Background="White" BorderBrush="LimeGreen" Foreground="#FF615858" 
-                                      Padding="2" FontFamily="Microsoft YaHei Light" 
+                                      Padding="2" FontFamily="Microsoft YaHei Light" Name="Combobox"
                                       >
                                 <ComboBox.ItemTemplate>
                                     <DataTemplate>
