--- a/src/XelsDesktopWalletApp/MainWindow.xaml
+++ b/src/XelsDesktopWalletApp/MainWindow.xaml
@@ -5,54 +5,110 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="600" Width="1100">
 
-    <Border Padding="10">
+    <!--Border Padding="10"-->
         <StackPanel>
 
-            <Grid Background="LimeGreen">
+            <!--- banner  -->
+        <StackPanel>
+
+            <Grid Background="LimeGreen" Margin="10" Height="100">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+
+                <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" Background="Transparent" BorderBrush="WhiteSmoke" 
+              BorderThickness="3" Margin="-2" CornerRadius="10" Padding="5">
+                    <Border.Effect>
+                        <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
+                    </Border.Effect>
+                    <Image Source="/Assets/Images/home-xels-logo-01.png" >
+
+                    </Image>
+                </Border>
+            </Grid>
+        </StackPanel>
+
+
+        <!--<Grid Background="LimeGreen">
                 <Image Source="/Assets/Images/home-xels-logo-01.png" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100"/>
 
-            </Grid>
+            </Grid>-->
 
-            <TextBlock Width="100" Height="34" Text="Welcome" FontWeight="Normal"  FontSize="22" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light"/>
-            <Label Content="Choose a wallet" Width="548" FontFamily="Microsoft YaHei Light" Height="26" FontSize="10"/>
+        <Border Margin="20">
+            <Label Content="Welcome" FontSize="25"
+                 FontWeight="Bold"  HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light"/>
+        </Border>
+           
+        <Border Margin="250 0 250 0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
 
-            <ComboBox ItemsSource="{Binding  Path=MyList, Mode=TwoWay}" 
-                      SelectedItem="{Binding Path=SelectedWallet, Mode=TwoWay}"
-                      Width="531" Background="White" BorderBrush="LimeGreen"  
-                      Padding="5,5,5,5" FontFamily="Microsoft YaHei Light" 
-                      Margin="0,0,10,0" >
-                <ComboBox.ItemTemplate>
+                <ComboBox x:Name="comboWallets" Grid.Row="0" 
+              ItemsSource="{Binding  walletList, Mode=TwoWay}"   
+                      SelectedValuePath="Name"
+                      DisplayMemberPath="Name"
+                      IsEditable="True"              
+                      Text="Select Wallet"
+                      Background="White" BorderBrush="LimeGreen"  
+                      Padding="5" FontFamily="Microsoft YaHei Light" 
+                      Margin="0,0,10,20">
+                    <!--<ComboBox.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding name}"/>
+                        <TextBlock Text="{Binding Name}"/>
                     </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Label Content="&#xD;&#xA;Password" Width="548" FontFamily="Microsoft YaHei Light" Height="37" FontSize="10"/>
+                </ComboBox.ItemTemplate>-->
+                </ComboBox>
 
-            
-            <PasswordBox Name="password" PasswordChar="*" Margin="0,0,10,0" Width="531" Padding="2" RenderTransformOrigin="0.792,0.552" FontFamily="Microsoft YaHei Light" Height="26" BorderBrush="LimeGreen" />
+                <!--SelectedItem="{Binding Path=SelectedWallet, Mode=TwoWay}"-->
 
-            <Button Background="#FF53E253" Width="531" x:Name="decryptButton" Click="DecryptButton_ClickAsync" Margin="0 10 10 0" Grid.Column="0" Content="Decrypt" FontFamily="Microsoft YaHei Light" FontWeight="Normal" Foreground="White" BorderThickness="0,0,0,0" Height="24" FontStyle="Normal" >
-                <Button.Resources>
-                    <Style TargetType="Border">
-                        <Setter Property="CornerRadius" Value="5"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
+                <!--IsEditable="True"   
+                      
+                      Text="Select Wallet"-->
 
-            <TextBlock Background="White" Margin="0 10 10 0" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" TextDecorations="" FontSize="10" Width="116" Height="17">
-                <Hyperlink RequestNavigate="Hyperlink_RequestNavigate" NavigateUri="http://www.google.com"  TextDecorations="">
-                    <Hyperlink.Style>
-                    <Style TargetType="{x:Type Hyperlink}"
+                <!--<Label Content="&#xD;&#xA;Password" Width="548" FontFamily="Microsoft YaHei Light" Height="37" FontSize="10"/>-->
+
+                <PasswordBox Grid.Row="1" Name="password" PasswordChar="*" Margin="0,0,10,20" 
+                             Padding="5" RenderTransformOrigin="0.792,0.552" FontFamily="Microsoft YaHei Light" 
+                             Height="26" 
+                         BorderBrush="LimeGreen" 
+                         />
+
+                <Button Grid.Row="2" Background="#FF53E253"  x:Name="decryptButton" 
+                    Click="DecryptButton_ClickAsync" Margin="0 10 10 0" Grid.Column="0" Content="Decrypt" 
+                    FontFamily="Microsoft YaHei Light" FontWeight="Normal" Foreground="White" 
+                    BorderThickness="0,0,0,0" Height="24" FontStyle="Normal" >
+                    <Button.Resources>
+                        <Style TargetType="Border">
+                            <Setter Property="CornerRadius" Value="5"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
+
+                <Label Grid.Row="3" Background="White" Margin="0 10 10 0" HorizontalAlignment="Center" 
+                   FontFamily="Microsoft YaHei Light"  FontSize="15" FontWeight="Bold" >
+                    <Hyperlink RequestNavigate="Hyperlink_RequestNavigate" NavigateUri="http://www.google.com" 
+                           TextDecorations="">
+                        <Hyperlink.Style>
+                            <Style TargetType="{x:Type Hyperlink}"
                             BasedOn="{StaticResource {x:Type Hyperlink}}">
-                        <Setter Property="Foreground" Value="Black"/>
-                    </Style>
-                </Hyperlink.Style><Run Text="Create or Restore a wallet"/>
-                </Hyperlink>
-            </TextBlock>
-        </StackPanel>
-    </Border>
+                                <Setter Property="Foreground" Value="Black"/>
+                            </Style>
+                        </Hyperlink.Style>
+                        <Run Text="Create or Restore a wallet"/>
+                    </Hyperlink>
+                </Label>
 
+            </Grid>
+        </Border>
+      
+             
+        </StackPanel>
+    
 </Window>
