--- a/src/XelsDesktopWalletApp/Views/Create.xaml
+++ b/src/XelsDesktopWalletApp/Views/Create.xaml
@@ -5,26 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
         mc:Ignorable="d"
-        Title="Create" Height="564" Width="800">
+        Title="Create" Height="600" Width="1100">
     <Border Padding="10">
         <StackPanel>
-            <Grid Background="LimeGreen">
-                <Image Width="100" Source="/Assets/Images/home-xels-logo-01.png" />
+            <StackPanel>
 
-            </Grid>
-            <TextBlock Background="White" Margin="0 10 10 0" HorizontalAlignment="Center">
+                <Grid Background="LimeGreen" Margin="10" Height="100">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
 
-            </TextBlock>
-            <TextBlock Margin="0,10,0,0" Width="196" Height="78" Text="Create a wallet" HorizontalAlignment="Center"  FontSize="28" FontFamily="Microsoft YaHei Light" />
+                    <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" Background="Transparent" BorderBrush="WhiteSmoke" 
+              BorderThickness="3" Margin="-2" CornerRadius="10" Padding="5">
+                        <Border.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
+                        </Border.Effect>
+                        <Image Source="/Assets/Images/home-xels-logo-01.png" >
+
+                        </Image>
+                    </Border>
+                </Grid>
+            </StackPanel>
+
+            <Border Margin="20 5">
+                <TextBlock Margin="0,10,0,0" Text="Create a wallet" HorizontalAlignment="Center"  FontSize="28" FontFamily="Microsoft YaHei Light" />
+            </Border>
+
             <TextBlock Margin="160,0,0,0" Text="Name" Width="608" FontFamily="Microsoft YaHei Light" Height="18" />
             <TextBox Name="name" MaxLength="24" Width="450"  Padding="5,5,5,5" AutomationProperties.HelpText="Enter a wallet name." TextBlock.FontFamily="Microsoft YaHei Light" />
-            
+
             <TextBlock Margin="160,10,0,0" Text="Password" Width="606" FontFamily="Microsoft YaHei Light" Height="19" />
             <PasswordBox Name="password" PasswordChar="*" Width="450" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" />
-            
+
             <TextBlock Margin="160,10,0,0" Text="Confirm password" Width="608" FontFamily="Microsoft YaHei Light" Height="18" />
             <PasswordBox Name="repassword"  PasswordChar="*"  Width="450" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" />
-            
+
             <TextBlock Margin="160,10,0,0" Text="Passphrase (optional)" Width="606" FontFamily="Microsoft YaHei Light" Height="18" />
             <TextBox Name="passphrase" Width="450" Padding="5,5,5,5" TextBlock.FontFamily="Microsoft YaHei Light" />
 
