--- a/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -5,13 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
         mc:Ignorable="d"
-        Title="CreateOrRestore" Height="450" Width="800">
-    <Border Padding="10">
+        Title="CreateOrRestore" Height="600" Width="1100">
+    
+    
+    <!--Border Padding="10"-->
         <StackPanel>
-            <Grid Background="LimeGreen">
-                <Image Width="100" Source="/Assets/Images/home-xels-logo-01.png" />
+            <StackPanel>
 
-            </Grid>
+                <Grid Background="LimeGreen" Margin="10" Height="100">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+
+                    <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" Background="Transparent" BorderBrush="WhiteSmoke" 
+              BorderThickness="3" Margin="-2" CornerRadius="10" Padding="5">
+                        <Border.Effect>
+                            <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
+                        </Border.Effect>
+                        <Image Source="/Assets/Images/home-xels-logo-01.png" >
+
+                        </Image>
+                    </Border>
+                </Grid>
+            </StackPanel>
 
             <TextBlock Background="White" Margin="0 10 10 0" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" TextDecorations="" Width="26" RenderTransformOrigin="0.51,0.144" Height="42">
                 <Hyperlink  NavigateUri="http://www.google.com" RequestNavigate="Hyperlink_RequestNavigate" TextDecorations="">
@@ -20,7 +36,7 @@
                             BasedOn="{StaticResource {x:Type Hyperlink}}">
                         <Setter Property="Foreground" Value="Black"/>
                     </Style>
-                    </Hyperlink.Style><Run Text="back"/>
+                    </Hyperlink.Style><Run Text="back "/>
                 </Hyperlink>
             </TextBlock>
 
@@ -56,5 +72,5 @@
             </Grid>
 
         </StackPanel>
-    </Border>
+    <!--</Border>-->
 </Window>
