--- a/src/XelsDesktopWalletApp/MainWindow.xaml
+++ b/src/XelsDesktopWalletApp/MainWindow.xaml
@@ -5,9 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        Title="Login" Height="500" Width="350" 
+        ResizeMode="NoResize" 
+        WindowStartupLocation="CenterScreen" 
+        WindowStyle="None" 
+        FontFamily="Segoe UI Emoji"        
+      >
 
-    <Border Padding="10">
+    <!--<Border Padding="10">
         <StackPanel>
 
             <Grid Background="LimeGreen">
@@ -53,6 +60,58 @@
                 </Hyperlink>
             </TextBlock>
         </StackPanel>
-    </Border>
+    </Border>-->
+
+
+
+    <Grid>
+
+        <Rectangle Height="280" VerticalAlignment="Top">
+            <Rectangle.Fill>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF41A43C"/>
+                    <GradientStop Color="#FF41A43C" Offset="1"/>
+                    <GradientStop Color="#FF41A43C" Offset="0.546"/>
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+
+        <Rectangle Width="280" Height="240" VerticalAlignment="Bottom" Margin="0,80" RadiusY="10" RadiusX="10" Fill="White">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="15" Direction="0" RenderingBias="Quality" ShadowDepth="1" Color="#FFBBBBBB"/>
+            </Rectangle.Effect>
+        </Rectangle>
+        <Grid VerticalAlignment="Bottom" Margin="35,80" Height="240">
+            <Label Content="LOGIN" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
+            <StackPanel VerticalAlignment="Center" Margin="15">
+                <ComboBox ItemsSource="{Binding  Path=MyList, Mode=TwoWay}"
+                           SelectedItem="{Binding Path=SelectedWallet, Mode=TwoWay}"
+                          Margin="0,10" materialDesign:HintAssist.Hint="WALLET" 
+                          Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                          FontFamily="Champagne &amp; Limousines" FontSize="15" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding name}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <!--<TextBox Margin="0,10" materialDesign:HintAssist.Hint="EMAIL" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>-->
+                <PasswordBox Name="password"  PasswordChar="*" Margin="0,10" materialDesign:HintAssist.Hint="PASSWORD" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="15"/>
+            </StackPanel>
+        </Grid>
+        <Button Width="150" x:Name="decryptButton" Click="DecryptButton_ClickAsync" HorizontalAlignment="Center" Background="#FF41A43C" VerticalAlignment="Bottom" Margin="0,65" Content="DECRYPT"/>
+        <!--<TextBlock Text="CREATE OR RSTORE A WALLET" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="30" Foreground="Gray" Cursor="Hand"/>-->
+        <TextBlock  HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="30" Foreground="Gray" Cursor="Hand">
+                <Hyperlink RequestNavigate="Hyperlink_RequestNavigate" NavigateUri="http://www.google.com"  TextDecorations="">
+                    <Hyperlink.Style>
+                    <Style TargetType="{x:Type Hyperlink}"
+                            BasedOn="{StaticResource {x:Type Hyperlink}}">
+                        <Setter Property="Foreground" Value="Black"/>
+                    </Style>
+                </Hyperlink.Style><Run Text="CREATE OR RSTORE A WALLET"/>
+                </Hyperlink>
+        </TextBlock>
+        <Image Source="/Assets/Images/icon.ico" Width="100" Height="100" VerticalAlignment="Top" Margin="30"/>
+    </Grid>
 
 </Window>
