--- a/src/XelsDesktopWalletApp/Views/Dashboard.xaml
+++ b/src/XelsDesktopWalletApp/Views/Dashboard.xaml
@@ -60,6 +60,18 @@
                         </Hyperlink>
                 </TextBlock>
 
+                <TextBlock Background="ForestGreen" Padding="2 2 2 2" Margin="246,0,0,0" HorizontalAlignment="Left"
+                           VerticalAlignment="Center" FontFamily="Microsoft YaHei" TextDecorations="" FontWeight="Normal"
+                           FontSize="9" Foreground="#FF434943" Height="18" Width="74" RenderTransformOrigin="1.25,0.78" >
+                        <Hyperlink  RequestNavigate="Hyperlink_NavigateNewLayout" NavigateUri="http://www.google.com" TextDecorations="">
+                            <Hyperlink.Style>
+                            <Style TargetType="{x:Type Hyperlink}"
+                                    BasedOn="{StaticResource {x:Type Hyperlink}}">
+                                <Setter Property="Foreground" Value="White"/>
+                            </Style>
+                            </Hyperlink.Style><Run Text="New Layout"/>
+                        </Hyperlink>
+                </TextBlock>
 
 
                 <Image Height="50" Source="/Assets/Images/home-xels-logo-01.png"   
