--- a/src/XelsDesktopWalletApp/MainWindow.xaml
+++ b/src/XelsDesktopWalletApp/MainWindow.xaml
@@ -11,13 +11,15 @@
         ResizeMode="NoResize" 
         WindowStartupLocation="CenterScreen" 
         WindowStyle="None" 
-        FontFamily="Segoe UI Emoji"        
-      >
+        FontFamily="Segoe UI Emoji">
 
-    <!--<Border Padding="10">
-        <StackPanel>
+    <!--Border Padding="10"-->
+    <!--
+    <StackPanel>
 
-            <!--- banner  -->
+        -->
+    <!--- banner  -->
+    <!--
         <StackPanel>
 
             <Grid Background="LimeGreen" Margin="10" Height="100">
@@ -35,19 +37,13 @@
                     </Image>
                 </Border>
             </Grid>
-        </StackPanel>
-
-
-        <!--<Grid Background="LimeGreen">
-                <Image Source="/Assets/Images/home-xels-logo-01.png" HorizontalAlignment="Center" VerticalAlignment="Center" Width="100"/>
-
-            </Grid>-->
+        </StackPanel>         
 
         <Border Margin="20">
             <Label Content="Welcome" FontSize="25"
                  FontWeight="Bold"  HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light"/>
         </Border>
-           
+
         <Border Margin="250 0 250 0">
             <Grid>
                 <Grid.RowDefinitions>
@@ -66,20 +62,8 @@
                       Background="White" BorderBrush="LimeGreen"  
                       Padding="5" FontFamily="Microsoft YaHei Light" 
                       Margin="0,0,10,20">
-                    <!--<ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding Name}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>-->
+                    
                 </ComboBox>
-
-                <!--SelectedItem="{Binding Path=SelectedWallet, Mode=TwoWay}"-->
-
-                <!--IsEditable="True"   
-                      
-                      Text="Select Wallet"-->
-
-                <!--<Label Content="&#xD;&#xA;Password" Width="548" FontFamily="Microsoft YaHei Light" Height="37" FontSize="10"/>-->
 
                 <PasswordBox Grid.Row="1" Name="password" PasswordChar="*" Margin="0,0,10,20" 
                              Padding="5" RenderTransformOrigin="0.792,0.552" FontFamily="Microsoft YaHei Light" 
@@ -105,14 +89,18 @@
                         <Hyperlink.Style>
                             <Style TargetType="{x:Type Hyperlink}"
                             BasedOn="{StaticResource {x:Type Hyperlink}}">
-                        <Setter Property="Foreground" Value="Black"/>
-                    </Style>
-                </Hyperlink.Style><Run Text="Create or Restore a wallet"/>
-                </Hyperlink>
-            </TextBlock>
-        </StackPanel>
-    </Border>-->
+                                <Setter Property="Foreground" Value="Black"/>
+                            </Style>
+                        </Hyperlink.Style>
+                        <Run Text="Create or Restore a wallet"/>
+                    </Hyperlink>
+                </Label>
 
+            </Grid>
+        </Border>
+
+
+    </StackPanel>-->
 
 
     <Grid>
@@ -135,18 +123,18 @@
         <Grid VerticalAlignment="Bottom" Margin="35,80" Height="240">
             <Label Content="LOGIN" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="5" Foreground="Gray" FontSize="18"/>
             <StackPanel VerticalAlignment="Center" Margin="15">
-                <ComboBox ItemsSource="{Binding  Path=MyList, Mode=TwoWay}"
-                           SelectedItem="{Binding Path=SelectedWallet, Mode=TwoWay}"
+                <ComboBox x:Name="comboWallets" ItemsSource="{Binding  Path=walletList, Mode=TwoWay}"
+                           DisplayMemberPath="Name" SelectedValuePath="Name"
                           Margin="0,10" materialDesign:HintAssist.Hint="WALLET" 
                           Style="{StaticResource MaterialDesignFloatingHintComboBox}"
                           FontFamily="Champagne &amp; Limousines" FontSize="15" >
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding name}"/>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
+
                 </ComboBox>
-                <!--<TextBox Margin="0,10" materialDesign:HintAssist.Hint="EMAIL" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>-->
+                <!-- 
+                
+                
+                SelectedItem="{Binding Path=SelectedWallet, Mode=TwoWay}"
+                <TextBox Margin="0,10" materialDesign:HintAssist.Hint="EMAIL" Style="{StaticResource MaterialDesignFloatingHintTextBox}" FontFamily="Champagne &amp; Limousines" FontSize="18"/>-->
                 <PasswordBox Name="password"  PasswordChar="*" Margin="0,10" materialDesign:HintAssist.Hint="PASSWORD" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontFamily="Champagne &amp; Limousines" FontSize="15"/>
             </StackPanel>
         </Grid>
@@ -165,10 +153,4 @@
         <Image Source="/Assets/Images/icon.ico" Width="100" Height="100" VerticalAlignment="Top" Margin="30"/>
     </Grid>
 
-            </Grid>
-        </Border>
-      
-             
-        </StackPanel>
-    
 </Window>
